# VRShop

./: README.txt
Dev/CorePlatform/Src/CoreUtils_CPP/Test_libPipePrimitives/: CMakeLists.txt  main.cpp
Dev/CorePlatform/Src/CoreUtils_CPP/Test_libURL/: CMakeLists.txt  main.cpp
Dev/CorePlatform/Src/CoreUtils_CPP/libAppData/: CMakeLists.txt  VRAppData.cpp  VRAppData.h  VRAppDataServer.cpp  VRAppDataServer.h
Dev/CorePlatform/Src/CoreUtils_CPP/libColor/: CMakeLists.txt  ColorGenerator.h
Dev/CorePlatform/Src/CoreUtils_CPP/libPipePrimitives/: CMakeLists.txt  VRPipeClient.cpp  VRPipeClient.h  VRPipeServer.cpp  VRPipeServer.h  ~$Pipes.doc
Dev/CorePlatform/Src/CoreUtils_CPP/libURL/: CMakeLists.txt  VRDownloadFile.cpp  VRDownloadFile.h
Dev/OSG/Src/: CMakeLists.txt
Dev/OSG/Src/CoreUtils_CPP/: CMakeLists.txt  CoreUtils_CPPConfig.cmake.in
Dev/OSG/Src/CoreUtils_CPP/Test_libColor/: CMakeLists.txt  Test_libColor.cpp
Dev/OSG/Src/CoreUtils_CPP/Test_libCommon/: CMakeLists.txt  Test_libCommon.cpp
Dev/OSG/Src/CoreUtils_CPP/Test_libReadWritePPM/: CMakeLists.txt  comandsRead.cpp  lena.ppm  output.ppm
Dev/OSG/Src/CoreUtils_CPP/Test_libTimer/: CMakeLists.txt
Dev/OSG/Src/CoreUtils_CPP/libColor/: CMakeLists.txt  Color.h  ColorGenerator.cpp
Dev/OSG/Src/CoreUtils_CPP/libCommon/: Array.h  BasicDefinitions.h  BasicStringDefinitions.cpp  BasicStringDefinitions.h  BitFlip.h  CMakeLists.txt  Factorial.cpp  Factorial.h  FileOperations.cpp  FileOperations.h  IniReader.cpp  IniReader.h  IniWriter.cpp  IniWriter.h  Log.cpp  Log.h  Singleton.h  StringManipulation.cpp  StringManipulation.h  Trace.cpp  Trace.h
Dev/OSG/Src/CoreUtils_CPP/libReadWritePPM/: Color_.cpp  Color_.h  ReadWritePPM.h
Dev/OSG/Src/CoreUtils_CPP/libTimer/: Chronometer.cpp  Chronometer.h  Chronometer_CPUTime.cpp  Chronometer_CPUTime.h  Chronometer_QueryPerformance.cpp  Chronometer_RealTime.cpp  TimerBase.cpp  Timer_CPUTime.cpp  Timer_CPUTime.h  Timer_QueryPerformance.h  Timer_RealTime.cpp  Timer_RealTime.h
Dev/OSG/Src/CoreUtils_OSG/: CMakeLists.txt
Dev/OSG/Src/CoreUtils_OSG/Test_libCamera/: CMakeLists.txt  main.cpp
Dev/OSG/Src/CoreUtils_OSG/Test_libCameraPicker/: CMakeLists.txt  main.cpp
Dev/OSG/Src/CoreUtils_OSG/Test_libOSGQTViewer/: CMakeLists.txt  VRMainWindow_GUI.cpp  VRMainWindow_GUI.ui  main.cpp
Dev/OSG/Src/CoreUtils_OSG/Test_libPicker/: CMakeLists.txt  (+1 more)
Dev/OSG/Src/DatabaseMgr/: CMakeLists.txt
Dev/OSG/Src/ManagementConsole/: CMakeLists.txt  Ideas for ProductInterface GUI.txt
Dev/OSG/Src/Props/: CMakeLists.txt
Dev/OSG/Src/SceneEditor/: CMakeLists.txt
Dev/OSG/Src/ShopScene/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/osganimate/: CMakeLists.txt  osganimate.cpp
ExercisesAndTutorials/Avatar/Src/osganimationeasemotion/: CMakeLists.txt  osganimationeasemotion.cpp
ExercisesAndTutorials/Avatar/Src/osganimationhardware/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/osganimationmakepath/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/osganimationmorph/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/osganimationnode/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/osganimationskinning/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/osganimationsolid/: CMakeLists.txt
ExercisesAndTutorials/Avatar/Src/osganimationtimeline/: CMakeLists.txt  osganimationtimeline.cpp
ExercisesAndTutorials/Avatar/Src/osganimationviewer/: AnimtkViewer.cpp  AnimtkViewerGUI.cpp  CMakeLists.txt
ExercisesAndTutorials/BastianRieck/Src/: CMakeLists.txt  OSGWidget.cpp  OSGWidget.h  QtOSG.cpp
ExercisesAndTutorials/Dialog/Src/: CMakeLists.txt
ExercisesAndTutorials/Dialog/Src/Test_libPlatform/: CMakeLists.txt  Test_libPlatform.cpp
ExercisesAndTutorials/Dialog/Src/libPlatform/: DataModel.cpp  DataModel.h  Database.cpp  InputWindow.cpp  InputWindow.h  OutputWindow.h  main.cpp
ExercisesAndTutorials/IPC/LocalFortune/Src/: CMakeLists.txt
ExercisesAndTutorials/IPC/NetworkFortune/Src/: CMakeLists.txt
ExercisesAndTutorials/InteractiveEditing/Src/TestSelectTwoPointsGUI/: CMakeLists.txt  main.cpp
ExercisesAndTutorials/InteractiveEditing/Src/libSphereWidget/: CMakeLists.txt  SphereWidget.cpp  SphereWidget.h
ExercisesAndTutorials/OSG/ProductGUI/Src/: CMakeLists.txt
ExercisesAndTutorials/OSG/Various/Src/: CMakeLists.txt
ExercisesAndTutorials/OSGQtBrowser/ExeForWebAndNormal/Src/: CMakeLists.txt
ExercisesAndTutorials/Pipes/Src/: CMakeLists.txt
ExercisesAndTutorials/Pipes/Src/Test_libModel/: CMakeLists.txt  main.cpp
ExercisesAndTutorials/Pipes/Src/Test_libPipe/: CMakeLists.txt  main.cpp
ExercisesAndTutorials/Pipes/Src/libModel/: CMakeLists.txt  VRMainWindow_GUI.cpp  VRMainWindow_GUI.h
ExercisesAndTutorials/Pipes/Src/libOSGQTViewer/: VROSGQT_Widget.cpp
ExercisesAndTutorials/Pipes/Src/libPipe/: CMakeLists.txt  PipeMgr.cpp  PipeMgrAutoDeblocking.cpp  PipeMgrAutoDeblockingReadInterface.cpp  PipeMgrAutoDeblockingReadInterface.h  PipeMgrAutoDeblockingWriteInterface.cpp  PipeMgrCreateConnect.cpp  PipeMgrCreateConnect.h  PipeMgrCreateConnectWriteInterface.h  PipeMgrOpen.cpp  PipeMgrOpen.h  PipeMgrPeek.cpp  PipeMgrPeek.h  PipeMgrReadInterface.h  PipeMgrWriteInterface.cpp  PipeNamesMgr.cpp  Pipes.doc
ExercisesAndTutorials/Pipes/Src/libPipeClientServer/: CMakeLists.txt  VRPipeClient.cpp  VRPipeClient.h  VRPipeServer.cpp  VRPipeServer.h
ExercisesAndTutorials/Visualization/Src/Test_HandleWidget/: CMakeLists.txt
ExercisesAndTutorials/Visualization/Src/Test_SphereWidget/: CMakeLists.txt  Test_SphereWidget.cpp
ExercisesAndTutorials/Visualization/Src/libSphereWidget/: CMakeLists.txt
ExercisesAndTutorials/Visualization/Src/libSplineWidget/: CMakeLists.txt  SplineWidget.h
Exile/ExercisesAndTutorials/Visualization/Src/: CMakeLists.txt
Exile/VTK/Src/: CMakeLists.txt
Exile/VTK/Src/CoreUtils_CPP/: CoreUtils_CPPConfig.cmake.in
Exile/VTK/Src/DatabaseMgr/: CMakeLists.txt
Exile/VTK/Src/ImagePrimitives/: CMakeLists.txt
Exile/VTK/Src/ManagementConsole/: CMakeLists.txt
Exile/VTK/Src/Props/: CMakeLists.txt
Exile/VTK/Src/SceneEditor/: CMakeLists.txt
(+1318 files in other folders)
