CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(VRShop)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_DEBUG_POSTFIX "D")

FIND_PACKAGE(OpenSceneGraph 
	REQUIRED osg osgAnimation osgDB osgGA osgQt osgUtil osgViewer OpenThreads
)

FIND_PACKAGE(Qt5Core)
IF(Qt5Core_FOUND)
  SET(Qt5_FOUND TRUE)
  FIND_PACKAGE(Qt5Core)
  FIND_PACKAGE(Qt5Gui)
  FIND_PACKAGE(Qt5Widgets)
  FIND_PACKAGE(Qt5OpenGL)
  FIND_PACKAGE(Qt5Sql)
  FIND_PACKAGE(Qt5Network)
ELSE(Qt5Core_FOUND)
  FIND_PACKAGE(Qt4 REQUIRED)
  SET(Qt4_FOUND TRUE)
ENDIF(Qt5Core_FOUND)

FILE(COPY ${CMAKE_SOURCE_DIR}/../Resources DESTINATION ${CMAKE_BINARY_DIR})
FILE(COPY ${CMAKE_SOURCE_DIR}/../Databases DESTINATION ${CMAKE_BINARY_DIR})

SUBDIRS(
	CoreUtils_CPP
	CoreUtils_OSG
	DatabaseMgr
	Props
	ManagementConsole
	ShopScene
)