CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(VRShop)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_DEBUG_POSTFIX "D")

FIND_PACKAGE(Qt5Core)
IF(Qt5Core_FOUND)
  SET(Qt5_FOUND TRUE)
  MESSAGE("Qt5 found")
  FIND_PACKAGE(Qt5Core)
  FIND_PACKAGE(Qt5Gui)
  FIND_PACKAGE(Qt5Widgets)
  FIND_PACKAGE(Qt5Sql)
ELSE()
  #Search for Qt packages 4 AND 5
  FIND_PACKAGE(Qt4 REQUIRED)
  SET(Qt4_FOUND TRUE)
  MESSAGE("Qt4 found")
ENDIF(Qt5Core_FOUND)

# Find VTK.
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

SUBDIRS(
  SceneEditor
  Props
  ManagementConsole
  DatabaseMgr
  CoreUtils_CPP
  ImagePrimitives
)