CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(osganimationmorph)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_DEBUG_POSTFIX "D")

FIND_PACKAGE(OpenSceneGraph 
	REQUIRED osg osgDB osgGA osgQt osgUtil osgViewer OpenThreads osgSim osgAnimation osgWidget
)

INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})

SET(SRCS
  osganimationmorph.cpp
)

ADD_EXECUTABLE(osganimationmorph ${SRCS})
TARGET_LINK_LIBRARIES(osganimationmorph
	${OSG_LIBRARIES}
	${OSGDB_LIBRARIES}
	${OSGGA_LIBRARIES}
	${OSGUTIL_LIBRARIES}
	${OSGVIEWER_LIBRARIES}
	${OSGSIM_LIBRARIES}
	${OSGANIMATION_LIBRARIES}
	${OPENTHREADS_LIBRARIES}
	${OSGWIDGET_LIBRARIES}
)


