CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(osganimationskinning)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_DEBUG_POSTFIX "D")

FIND_PACKAGE(OpenSceneGraph 
	REQUIRED osg osgDB osgGA osgQt osgUtil osgViewer OpenThreads osgSim osgAnimation osgWidget
)

INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})

SET(SRCS
  osganimationskinning.cpp
)

ADD_EXECUTABLE(osganimationskinning ${SRCS})
TARGET_LINK_LIBRARIES(osganimationskinning
	${OSG_LIBRARIES}
	${OSGDB_LIBRARIES}
	${OSGGA_LIBRARIES}
	${OSGUTIL_LIBRARIES}
	${OSGVIEWER_LIBRARIES}
	${OSGSIM_LIBRARIES}
	${OSGANIMATION_LIBRARIES}
	${OPENTHREADS_LIBRARIES}
	${OSGWIDGET_LIBRARIES}
)


