CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(TestSelectTwoPointsGUI)

# Find ITK.
#FIND_PACKAGE(ITK REQUIRED)
#INCLUDE(${ITK_USE_FILE})

# Find VTK.
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

# use what QVTK built with
SET(QT_QMAKE_EXECUTABLE ${VTK_QT_QMAKE_EXECUTABLE} CACHE FILEPATH "")
SET(QT_MOC_EXECUTABLE ${VTK_QT_MOC_EXECUTABLE} CACHE FILEPATH "")
SET(QT_UIC_EXECUTABLE ${VTK_QT_UIC_EXECUTABLE} CACHE FILEPATH "")
SET(DESIRED_QT_VERSION ${VTK_DESIRED_QT_VERSION} CACHE FILEPATH "")
FIND_PACKAGE(Qt)
IF(QT_USE_FILE)
  INCLUDE(${QT_USE_FILE})
ELSE(QT_USE_FILE)
  SET(QT_LIBRARIES   ${QT_QT_LIBRARY})
ENDIF(QT_USE_FILE)

# Use the include path and library for Qt that is used by VTK.
INCLUDE_DIRECTORIES(
        ${QT_INCLUDE_DIR}
        ${CMAKE_CURRENT_BINARY_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/libArrowSourceStartEnd
        ${CMAKE_SOURCE_DIR}/libCommon
		${CMAKE_SOURCE_DIR}/libSelectTwoPointsGUI
		${CMAKE_BINARY_DIR}/libSelectTwoPointsGUI
		${CMAKE_CURRENT_BINARY_DIR}/../libSelectTwoPointsGUI
	    ${CMAKE_CURRENT_SOURCE_DIR}/../libSphereWidget/
	    ${CMAKE_CURRENT_BINARY_DIR}/../libSphereWidget
)

SET(SRCS ${SRCS} ${MOC_SRCS}
    main.cpp
	)

ADD_EXECUTABLE(TestSelectTwoPointsGUI ${SRCS} ${UI_SRCS})

TARGET_LINK_LIBRARIES(TestSelectTwoPointsGUI
  QVTK
  ${QT_LIBRARIES}
  libSphereWidget
  libArrowSourceStartEnd
  libSelectTwoPointsGUI
  vtkRendering
  vtkGraphics
  vtkIO
  vtkCommon
  vtkVolumeRendering
)




