CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(VRShopExaTut)

SET(CMAKE_DEBUG_POSTFIX "D")

FIND_PACKAGE(VTK)
IF(NOT VTK_DIR)
  MESSAGE(FATAL_ERROR "Please set VTK_DIR.")
ENDIF(NOT VTK_DIR)
INCLUDE(${VTK_USE_FILE})

# Find VTK.
FIND_PACKAGE(VTK REQUIRED)
IF(VTK_USE_FILE)
  INCLUDE(${VTK_USE_FILE})
ENDIF(VTK_USE_FILE)


#set(CMAKE_C_FLAGS_DEBUG "/MTd /Od /Zi")
#set(CMAKE_C_FLAGS_RELEASE "/MT")

#set(CMAKE_CXX_FLAGS_DEBUG "/MTd /Od  /Zi")
#set(CMAKE_CXX_FLAGS_RELEASE "/MT")

INCLUDE_DIRECTORIES(
)

SUBDIRS(
	libHandleWidget
	libSplineWidget
	libSphereWidget
	Test_HandleWidget
	Test_SplineWidget
	Test_SphereWidget
)