PROJECT(libURL)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_DEBUG_POSTFIX "D")

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/CoreUtils_CPP/libCommon
)

SET(SRCS
	VRDownloadFile.h VRDownloadFile.cpp
)

ADD_LIBRARY( libURL ${SRCS} )


TARGET_LINK_LIBRARIES(libURL
	wininet.lib
)

SET_PROPERTY(TARGET libURL PROPERTY FOLDER Basics)